add module-info.java for all subprojects; make it compatible with jpackage