@@ -70,6 +70,10 @@
                             <version>${lombok.version}</version>
                         </path>
                     </annotationProcessorPaths>
+                    <compilerArgs>
+                        <arg>--add-reads</arg>
+                        <arg>io.github.nhtuan10.mykafkatool.launcher=ALL-UNNAMED</arg>
+                    </compilerArgs>
                 </configuration>
             </plugin>
             <plugin>
@@ -79,7 +83,7 @@
                     <archive>
                         <manifest>
                             <addClasspath>true</addClasspath>
-                            <mainClass>io.github.nhtuan10.mykafkatool.ModularLauncher</mainClass>
+                            <mainClass>io.github.nhtuan10.mykafkatool.launcher.ModularLauncher</mainClass>
                         </manifest>
                     </archive>
                 </configuration>
@@ -108,7 +112,7 @@
 
             <!--                    <archive>-->
             <!--                        <manifest>-->
-            <!--                            <mainClass>io.github.nhtuan10.mykafkatool.ModularLauncher</mainClass>-->
+            <!--                            <mainClass>io.github.nhtuan10.mykafkatool.launcher.ModularLauncher</mainClass>-->
             <!--                        </manifest>-->
             <!--                    </archive>-->
             <!--                    <descriptorRefs>-->
